@@ -39,7 +39,7 @@ int main()
         }
 
         auto&& mousePos =
-            sf::Vector2f(sf::Mouse::getPosition(window.getWindowContext()));
+            sf::Vector2f(sf::Mouse::getPosition(window.getSfmlWindowContext()));
         auto&& mouseDir = dgm::Math::toUnit(mousePos - center);
         auto&& mouseLine = dgm::Math::Line(mouseDir, center);
 
