@@ -10,7 +10,7 @@ static inline void drawLine(
     const sf::Color& color)
 {
     sf::Vertex line[] = { sf::Vertex(a, color), sf::Vertex(b, color) };
-    window.getWindowContext().draw(line, 2, sf::PrimitiveType::Lines);
+    window.getSfmlWindowContext().draw(line, 2, sf::PrimitiveType::Lines);
 }
 
 static inline void drawDot(
